--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -156,6 +156,11 @@ ul {
   margin: 50px 20px 20px 20px;
 }
 
+.divFooter {
+  margin-top: 4em;
+  text-align: center;
+}
+
 /* Task List Styles */
 .taskLi {
   display: flex;
@@ -301,6 +306,21 @@ form i:hover {
   flex-direction: column;
   align-items: center;
   padding: 1rem;
+}
+
+.changeUsernameDiv {
+  border: 1px solid black;
+  display: flex;
+  flex-direction: column;
+  margin-top: 3em;
+  padding: 1.5rem;
+  border-radius: 5px;
+}
+
+.CU {
+  display: block;
+  text-align: center;
+  margin-bottom: 0.5em;
 }
 
 .buttonDiv {
