--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -527,7 +527,7 @@ h1 {
 .sticky-note {
 
   width: 800px;
-  height: 350px;
+  max-height: 450px;
   padding: 20px;
   box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.2);
   border-radius: 5px;
